<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mono_white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/topBar"
        style="@style/TopBar">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="52dp"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/btn_back"
            android:padding="14dp"
            android:src="@drawable/ic_back" />

        <TextView
            style="@style/TopBarTitle"
            android:text="@string/settings_title" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/settingsScroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/settingsContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/screen_pad">

            <TextView
                style="@style/SectionLabel"
                android:text="@string/settings_calendar_section" />

            <EditText
                android:id="@+id/calendarNameInput"
                style="@style/InputField"
                android:layout_marginTop="@dimen/space_s"
                android:hint="@string/settings_calendar_name_hint"
                android:importantForAutofill="no"
                android:inputType="textCapSentences" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_xs"
                android:text="@string/settings_calendar_name_note"
                android:textColor="@color/mono_gray_text"
                android:textSize="@dimen/text_label" />

            <LinearLayout
                android:id="@+id/calendarPickerRow"
                style="@style/SettingRow"
                android:layout_marginTop="@dimen/space_l">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_use_picker"
                        android:textColor="@color/mono_black"
                        android:textSize="@dimen/text_body" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_use_picker_hint"
                        android:textColor="@color/mono_gray_text"
                        android:textSize="@dimen/text_label" />
                </LinearLayout>
                <Switch
                    android:id="@+id/usePickerSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                style="@style/SettingRow"
                android:layout_marginTop="@dimen/space_m">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_show_all"
                        android:textColor="@color/mono_black"
                        android:textSize="@dimen/text_body" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_show_all_hint"
                        android:textColor="@color/mono_gray_text"
                        android:textSize="@dimen/text_label" />
                </LinearLayout>
                <Switch
                    android:id="@+id/showAllSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                style="@style/SectionLabel"
                android:layout_marginTop="@dimen/space_xl"
                android:text="@string/settings_confirm_section" />

            <Switch
                android:id="@+id/confirmWriteSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_confirm_write"
                android:textColor="@color/mono_black"
                android:textSize="@dimen/text_body" />

            <Switch
                android:id="@+id/confirmReplaceSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_confirm_replace"
                android:textColor="@color/mono_black"
                android:textSize="@dimen/text_body" />

            <TextView
                style="@style/SectionLabel"
                android:layout_marginTop="@dimen/space_xl"
                android:text="@string/settings_account_section" />

            <Switch
                android:id="@+id/savePasswordSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_save_password"
                android:textColor="@color/mono_black"
                android:textSize="@dimen/text_body" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_save_password_hint"
                android:textColor="@color/mono_gray_text"
                android:textSize="@dimen/text_label" />

            <TextView
                style="@style/SectionLabel"
                android:layout_marginTop="@dimen/space_xl"
                android:text="@string/settings_theme_section" />

            <Switch
                android:id="@+id/dynamicThemeSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_dynamic_theme"
                android:textColor="@color/mono_black"
                android:textSize="@dimen/text_body" />

            <Button
                android:id="@+id/saveSettingsBtn"
                style="@style/ButtonPrimary"
                android:layout_marginTop="@dimen/space_xl"
                android:text="@string/settings_save" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
